; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..configuration.c_config_get_default_joypad.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..configuration.c_config_get_default_joypad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JOYPAD_DEFAULT_DRIVER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"ps4\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"ps3\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"xinput\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"gx\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"wiiu\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"xdk\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"psp\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"ps2\00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"ctr\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"switch\00", align 1
@.str.10 = private unnamed_addr constant [7 x i8] c"dinput\00", align 1
@.str.11 = private unnamed_addr constant [5 x i8] c"udev\00", align 1
@.str.12 = private unnamed_addr constant [9 x i8] c"linuxraw\00", align 1
@.str.13 = private unnamed_addr constant [8 x i8] c"android\00", align 1
@.str.14 = private unnamed_addr constant [4 x i8] c"sdl\00", align 1
@.str.15 = private unnamed_addr constant [4 x i8] c"hid\00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"qnx\00", align 1
@.str.17 = private unnamed_addr constant [8 x i8] c"rwebpad\00", align 1
@.str.18 = private unnamed_addr constant [4 x i8] c"dos\00", align 1
@.str.19 = private unnamed_addr constant [4 x i8] c"mfi\00", align 1
@.str.20 = private unnamed_addr constant [5 x i8] c"null\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @config_get_default_joypad() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @JOYPAD_DEFAULT_DRIVER, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %26 [
    i32 137, label %5
    i32 138, label %6
    i32 128, label %7
    i32 144, label %8
    i32 130, label %9
    i32 129, label %10
    i32 136, label %11
    i32 139, label %12
    i32 147, label %13
    i32 132, label %14
    i32 146, label %15
    i32 131, label %16
    i32 142, label %17
    i32 148, label %18
    i32 133, label %19
    i32 143, label %20
    i32 135, label %21
    i32 134, label %22
    i32 145, label %23
    i32 141, label %24
    i32 140, label %25
  ]

5:                                                ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %27

6:                                                ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8** %1, align 8
  br label %27

7:                                                ; preds = %0
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8** %1, align 8
  br label %27

8:                                                ; preds = %0
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i8** %1, align 8
  br label %27

9:                                                ; preds = %0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i8** %1, align 8
  br label %27

10:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0), i8** %1, align 8
  br label %27

11:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8** %1, align 8
  br label %27

12:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0), i8** %1, align 8
  br label %27

13:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i64 0, i64 0), i8** %1, align 8
  br label %27

14:                                               ; preds = %0
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i64 0, i64 0), i8** %1, align 8
  br label %27

15:                                               ; preds = %0
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.10, i64 0, i64 0), i8** %1, align 8
  br label %27

16:                                               ; preds = %0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.11, i64 0, i64 0), i8** %1, align 8
  br label %27

17:                                               ; preds = %0
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.12, i64 0, i64 0), i8** %1, align 8
  br label %27

18:                                               ; preds = %0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.13, i64 0, i64 0), i8** %1, align 8
  br label %27

19:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.14, i64 0, i64 0), i8** %1, align 8
  br label %27

20:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.15, i64 0, i64 0), i8** %1, align 8
  br label %27

21:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i64 0, i64 0), i8** %1, align 8
  br label %27

22:                                               ; preds = %0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.17, i64 0, i64 0), i8** %1, align 8
  br label %27

23:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.18, i64 0, i64 0), i8** %1, align 8
  br label %27

24:                                               ; preds = %0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.19, i64 0, i64 0), i8** %1, align 8
  br label %27

25:                                               ; preds = %0
  br label %26

26:                                               ; preds = %0, %25
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.20, i64 0, i64 0), i8** %1, align 8
  br label %27

27:                                               ; preds = %26, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %28 = load i8*, i8** %1, align 8
  ret i8* %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
